# ZDT-D

./: .gitignore  AGENTS.md  BUILD_AUTOMATION.md  INSTRUCTIONS.md  Makefile  README.en.md  README.md  README.ru.md  ZDT-fix  ZDT-fix.sha256  action.sh  build.sh  customize.sh  delete-dpi-tunnel.sh  delete-dpi-tunnel.sh.sha256  localhost_scan.txt  module.prop  module.prop.sha256  post-fs-data.sh  post-fs-data.sh.sha256  service.sh  service.sh.sha256  setup_ubuntu22_zdtd_env_v2.sh  toast.apk.sha256  uninstall.sh  uninstall.sh.sha256  verify.sh  webui.apk.sha256
.github/: copilot-instructions.md
.github/workflows/: ai-polish-cleanup.yml  ai-polish.yml  build.yml
Rust/block_domen_html/: Cargo.toml
Rust/zdt_d_system_update/: Cargo.toml
Rust/zdt_d_system_update/src/: main.rs
Update/: changelog.md  index.html  system_update.json  update.json  update_block.json
application/: README.md  build.gradle  gradle.properties  keystore.properties.example  settings.gradle
application/app/: build.gradle  build.gradle.bak  proguard-rules.pro
config/: blocked-names.txt  dnscrypt-proxy.toml  dnscrypt-proxy.toml.sha256
docs/: AI_COLLABORATION.md  CONSTRUCTION_STUDIO.md  CONSTRUCTION_T2S_START_PLAN.md  COPILOT_POLISH.md  PROGRAMS.md  ZYGISK.md
files/: php.ini  php.ini.sha256
files/www/: additional_setting.php  article.html  blackbox.php  experimental.php  get_service_status.php  index.70db41ce.css  index.php  index.php_работает  load_file.php  replace_images.php  run_command.php  save_file.php  setting.php  toggle_dns_service.php  toggle_service.php  toggle_vpn_service.php
libs/android-aarch64/: ip2net  mdig  tpws
libs/android-arm/: mdig
libs/android-x86/: ciadpi-zdt  ip2net  mdig  tpws
libs/android-x86_64/: ip2net  mdig  tpws
module/: service.sh
module_template/: README.md  customize.sh  service.sh  uninstall.sh  verify.sh
module_template/setting/: start.json
module_template/strategic/: instructions.md
module_template/verify_sum/: .gitkeep
plans/: README_ZDTD_FUTURE_ROUTING_PLANS.md
rust/: Cargo.toml
rust/T2s/: Cargo.toml  README.md
rust/dpi-detector/: Cargo.toml  README.md
rust/dpi-detector/src/: app.rs  cli.rs  config.rs  main.rs  model.rs  net.rs  runner.rs  tests.rs
rust/nfqws-tester/: Cargo.toml  README.md
scripts /: test_nfqws.sh
system/: ZDT-D  dpitunnel-cli.sha256  zapret  zapret.sha256  zdt-d_tanspanent_proxy-sosck5.py  zdt-d_tanspanent_proxy-sosck5.py.sha256
useful_scripts/: brute_force_uid.sh
webroot/: backup.html  check.html  config.html  domains.html  index.html  index.html.sha256  kernelsu.js  module_icon.png.sha256
working_folder/: ciadpi.conf  config0  config1  ip_ranges3.txt  ip_ranges4.txt  params  uid_program1  zapret_config0  zapret_config1  zapret_config2  zapret_config3  zapret_config4  zapret_uid1  zapret_uid2  zapret_uid3  zapret_uid4  zapret_uid5
www/: index.php  index.php.sha256  reboot.php  reboot.php.sha256
zygisk/: CMakeLists.txt  README.md  build.sh
zygisk/include/: zygisk.hpp
zygisk/src/: main.cpp
(+435 files in other folders)
