[package]
name = "zdt_d_system_update"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTPS без openssl (важно для Android/NDK): rustls
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
