[package]
name = "dpi-detector"
version = "0.2.1"
edition = "2021"
description = "Native ZDT-D DPI diagnostics helper"
license = "MIT"

[[bin]]
name = "dpi-detector"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "stream", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
url = "2.5"
